OOFSWIG/Tests/Errors/missing_struct.i
%module error
%{
%}

/* This file tests to make sure SWIG handles a missing structure name */

typedef struct {
	double x;
	double y;
	double z;
} Vector;


